feat: endpoint para listar todas as opções
